Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Fixed
-
5.15.8
-
-
13
-
Team A Foundation Sprint 60
Description
btchat example uploaded to the Redmi 9A (Android 10) phone sometimes fails to emit QBluetoothServiceDiscoveryAgent::finished even after waiting for 3 minutes or so (instead it finishes in 40-50s usually).
It's enough to click "Cancel" and then "Connect" to retry scanning and then it succeeds. But trying to scan for btchat server again and again sometimes makes it not fire "finished()" signal at all. Usually it succeeds two scans in the row, then third one never finishes.
All I see in application output is this (prints when starting new discovery sequence):
W libbtchat_armeabi-v7a.so: qt.bluetooth.android: ACCESS_COARSE|FINE_LOCATION permission available
I've failed to reproduce that on Mate 20 Lite (Android 10 too, but it's arm64) with same btchat though.
Originally discovered with our WIP app, but reproduced with btchat example.
Another side of btchat is running on Debian 11 bullseye.