src/bluetooth/android/devicediscoverybroadcastreceiver.cpp
@@ -410,7 +410,7 @@ void DeviceDiscoveryBroadcastReceiver::onReceive(JNIEnv *env, jobject context, j
         emit finished();
     } else if (action == valueForStaticField(JavaNames::BluetoothAdapter,
                                              JavaNames::ActionDiscoveryStarted).toString()) {
-
+        emit discoveryStarted();
     } else if (action == valueForStaticField(JavaNames::BluetoothDevice,
                                              JavaNames::ActionFound).toString()) {
         //get BluetoothDevice
