src/bluetooth/qbluetoothdevicediscoveryagent_p.h
@@ -147,6 +147,8 @@ private slots:
 
 private:
     void startLowEnergyScan();
+    void classicDiscoveryStartFail();
+    bool setErrorIfPowerOff();
 
     DeviceDiscoveryBroadcastReceiver *receiver = nullptr;
     QBluetoothAddress m_adapterAddress;
@@ -154,6 +156,8 @@ private:
     QJniObject adapter;
     QJniObject leScanner;
     QTimer *leScanTimeout = nullptr;
+    QTimer *deviceDiscoveryStartTimeout = nullptr;
+    short deviceDiscoveryStartAttemptsLeft;
 
     bool pendingCancel = false;
     bool pendingStart = false;
