src/bluetooth/qbluetoothservicediscoveryagent_android.cpp
@@ -218,7 +218,7 @@ void QBluetoothServiceDiscoveryAgentPrivate::_q_processFetchedUuids(
             Q_Q(QBluetoothServiceDiscoveryAgent);
             QTimer::singleShot(4000, q, [this]() {
                 this->_q_fetchUuidsTimeout();
-            }); // will also call _q_seriveDiscoveryFinished()
+            }); // will also call _q_serviceDiscoveryFinished()
         } else {
             _q_serviceDiscoveryFinished();
         }
